Add additional Information.

--- a/Booklet - Q26.ipynb
+++ b/Booklet - Q26.ipynb
@@ -249,6 +249,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**6.** Test your program for the following joint probability table.\n",
+    "\n",
+    "I tested the table above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**7.** Verify the following picture"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
