--- a/Booklet - Q26.ipynb
+++ b/Booklet - Q26.ipynb
@@ -16,9 +16,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from numpy import inf\n",
-    "import matplotlib.pyplot as plt\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -48,7 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expected_value = lambda z, p_z: np.sum(z * p_z)"
+    "expected_value = lambda z, p_z: np.sum(z * p_z)\n",
+    "safe_log = lambda x: np.log(np.array(x) + 1e-100)"
    ]
   },
   {
@@ -109,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_p_x_y = np.log(p_x_y)\n",
+    "log_p_x_y = safe_log(p_x_y)\n",
     "log_p_x_y[log_p_x_y == -inf] = 0\n",
     "joint_entropy = - expected_value(log_p_x_y, p_x_y)"
    ]
@@ -146,10 +145,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_p_x = np.log(p_x)\n",
+    "log_p_x = safe_log(p_x)\n",
     "marginal_entropy_x = - expected_value(log_p_x, p_x)\n",
     "\n",
-    "log_p_y = np.log(p_y)\n",
+    "log_p_y = safe_log(p_y)\n",
     "marginal_entropy_y = - expected_value(log_p_y, p_y)"
    ]
   },
@@ -187,11 +186,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_p_y_given_x = np.log(p_y_given_x)\n",
+    "log_p_y_given_x = safe_log(p_y_given_x)\n",
     "log_p_y_given_x[log_p_y_given_x == -inf] = 0\n",
     "conditional_entropy_y_given_x = - expected_value(log_p_y_given_x, p_x_y)\n",
     "\n",
-    "log_p_x_given_y = np.log(p_x_given_y)\n",
+    "log_p_x_given_y = safe_log(p_x_given_y)\n",
     "log_p_x_given_y[log_p_x_given_y == -inf] = 0\n",
     "conditional_entropy_x_given_y = - expected_value(log_p_x_given_y, p_x_y)"
    ]
