--- a/Booklet - Q26.ipynb
+++ b/Booklet - Q26.ipynb
@@ -25,7 +25,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p_x_y = np.array([[.3, .3, 0], [.1, .2, .1]])"
+    "p_x_y = np.array([[.3, .3, 0], [.1, .2, .1]])\n",
+    "x = np.array([1, 2])\n",
+    "y = np.array([-1, 0, 5])"
    ]
   },
   {
@@ -63,11 +65,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expected_x = expected_value([1, 2], p_x)\n",
-    "expected_y = expected_value([-1, 0, 5], p_y)\n",
-    "expected_y_given_x = expected_value([[1], [2]], p_y_given_x)\n",
-    "expected_x_given_y = expected_value([-1, 0, 5], p_x_given_y)\n",
-    "cov = expected_value(np.matmul(([1, 2] - expected_x).reshape(2,1), ([-1, 0, 5] - expected_y).reshape(1,3)), p_x_y)"
+    "expected_x = expected_value(x, p_x)\n",
+    "expected_y = expected_value(y, p_y)\n",
+    "expected_y_given_x = expected_value(np.transpose(x).reshape(x.shape[0], 1), p_y_given_x)\n",
+    "expected_x_given_y = expected_value(y, p_x_given_y)\n",
+    "cov = expected_value(np.matmul((x - expected_x).reshape(x.shape[0], 1), (y - expected_y).reshape(1, y.shape[0])), p_x_y)"
    ]
   },
   {
@@ -324,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
